--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class="bg-[#DCFCE7]">
+<body class="bg-[#DCFCE780]">
     <nav class="lg:w-full mx-auto">
         <div class="navbar bg-green-700 shadow-sm lg:px-16">
             <div class="navbar-start">
@@ -64,7 +64,7 @@
     </section>
     <!-- all category + card + cart -->
 
-    <section class="lg:w-11/12 mx-auto mt-10 flex flex-col lg:flex-row gap-3">
+    <section class="lg:w-11/12 mx-auto mt-14 flex flex-col lg:flex-row gap-3">
         <!-- div for all category -->
         <div class="lg:w-[15%] ">
             <h2 class="text-xl p-4 font-bold">Categories</h2>
@@ -75,7 +75,7 @@
         </div>
 
         <!--div for showing card  -->
-        <div id="plant-card-container" class=" lg:w-[65%] border-2 grid grid-cols-1 lg:grid-cols-3">
+        <div id="plant-card-container" class=" lg:w-[65%]  grid grid-cols-1 lg:grid-cols-3 gap-3 shadow-lg">
             <div class="flex justify-center ">
                 <span class="loading loading-spinner loading-xs"></span>
                 <span class="loading loading-spinner loading-sm"></span>
@@ -93,8 +93,57 @@
         </div>
     </section>
 
+    <!-- about the campaign section-->
 
+    <section class="mt-28 max-w-[1090px] mx-auto">
+        <h1 class="text-3xl lg:text-4xl font-bold text-center lg:mb-28">About the Campaign</h1>
 
+        <div class="hero  ">
+            <div class="hero-content flex-col lg:flex-row">
+                <img src="./assets/about.png" class="max-w-sm rounded-lg shadow-2xl" />
+                <div class="text-md text-gray-800">
+                    <p class="py-6 ml-2.5">
+                        Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.
+                    </p>
+                    <ul class="list-disc ml-24 lg:ml-5">
+                        <li>Restoration of natural habitats</li>
+                        <li>Improvement of air quality</li>
+                        <li>Support for local communities</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- our impact section -->
+     <section class="max-w-[1920px] mx-auto bg-[#cff0dc] mt-6">
+        <div class="py-6 lg:py-[100px] px-3 lg:px-[135px] text-center  space-y-[40px]">
+            <h1 class="font-bold text-3xl">Our Impact</h1>
+            <div class="grid grid-cols-3 gap-3 lg:gap-[50px]">
+                <div class="bg-white p-[40px] rounded-[25px] space-y-3">
+                    <p class="text-3xl text-green-700 font-bold"><span>500</span>K+</p>
+                    <p class="text-lg text-gray-600">Trees Planted</p>
+                </div>
+                <div class="bg-white p-[40px] rounded-[25px] space-y-3">
+                    <p class="text-3xl text-green-700 font-bold"><span>120</span>K+</p>
+                    <p class="text-lg text-gray-600">Communities Involved</p>
+                </div>
+                <div class="bg-white p-[40px] rounded-[25px] space-y-3">
+                    <p class="text-3xl text-green-700 font-bold"><span>30</span>K+</p>
+                    <p class="text-lg text-gray-600">Countries Reached</p>
+                </div>
+                
+            </div>
+        </div>
+        
+     </section>
+
+    <!-- form section -->
+    <section>
+
+    </section>
+    <!-- footer section -->
+    <footer></footer>
 
 
 
