--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                 <img src="./assets/about.png" class="max-w-sm rounded-lg shadow-2xl" />
                 <div class="text-md text-gray-800">
                     <p class="py-6 ml-2.5">
-                        Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.
+                        Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since
+                        our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore
+                        forests, create habitats for wildlife, and combat global warming.
                     </p>
                     <ul class="list-disc ml-24 lg:ml-5">
                         <li>Restoration of natural habitats</li>
@@ -116,34 +118,48 @@
     </section>
 
     <!-- our impact section -->
-     <section class="max-w-[1920px] mx-auto bg-[#cff0dc] mt-6">
+    <section class="max-w-[1920px] mx-auto bg-[#cff0dc] mt-6">
         <div class="py-6 lg:py-[100px] px-3 lg:px-[135px] text-center  space-y-[40px]">
             <h1 class="font-bold text-3xl">Our Impact</h1>
             <div class="grid grid-cols-3 gap-3 lg:gap-[50px]">
                 <div class="bg-white p-[40px] rounded-[25px] space-y-3">
-                    <p class="text-3xl text-green-700 font-bold"><span>500</span>K+</p>
-                    <p class="text-lg text-gray-600">Trees Planted</p>
+                    <p class="text-xl lg:text-3xl text-green-700 font-bold"><span>500</span>K+</p>
+                    <p class="text-sm lg:text-lg text-gray-600">Trees Planted</p>
                 </div>
                 <div class="bg-white p-[40px] rounded-[25px] space-y-3">
-                    <p class="text-3xl text-green-700 font-bold"><span>120</span>K+</p>
-                    <p class="text-lg text-gray-600">Communities Involved</p>
+                    <p class="text-xl lg:text-3xl text-green-700 font-bold"><span>120</span>K+</p>
+                    <p class="text-sm lg:text-lg text-gray-600">Communities Involved</p>
                 </div>
                 <div class="bg-white p-[40px] rounded-[25px] space-y-3">
-                    <p class="text-3xl text-green-700 font-bold"><span>30</span>K+</p>
-                    <p class="text-lg text-gray-600">Countries Reached</p>
+                    <p class="text-xl lg:text-3xl text-green-700 font-bold"><span>30</span>K+</p>
+                    <p class="text-sm lg:text-lg text-gray-600">Countries Reached</p>
                 </div>
-                
+
             </div>
         </div>
-        
-     </section>
-
-    <!-- form section -->
-    <section>
 
     </section>
+
+    <!-- form section -->
+    <section class="max-w-[1920px] mx-auto bg-green-700 pb-24">
+        <h1 class=" text-center pt-7 text-4xl text-white font-semibold">Plant a tree Today</h1>
+        <div class="lg:w-[35%]  mx-auto mt-8 p-6 bg-green-600 shadow-lg rounded-lg flex flex-col gap-4">
+            <input type="text" placeholder="Your Name" class="input w-full" />
+            <input type="email" placeholder="Your Email Address" class="input w-full" />
+            <select class="select w-full">
+                <option disabled selected>Number of Trees</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+            </select>
+            <button class="h-11 bg-amber-300 rounded-[999px] text-green-700 font-semibold">Donate Now</button>
+
+        </div>
+    </section>
     <!-- footer section -->
-    <footer></footer>
+    <footer class="max-w-[1920px] mx-auto bg-green-800 text-center">
+        <p class="py-4 text-xl text-white ">© 2025 Green Earth. All Rights Reserved.</p>
+    </footer>
 
 
 
