--- a/index.html
+++ b/index.html
@@ -93,8 +93,23 @@
         </div>
     </section>
 
-    <!-- about the campaign section-->
+<!-- modal -->
+<div id="modal-container" class="hidden fixed inset-0 bg-green-300 opacity-90 flex justify-center items-center">
+  <div id="modal-content" class="bg-white p-6 rounded-lg max-w-md w-full">
+      <h2 id="modal-title" class="text-xl font-bold my-3"></h2>
+      <img id="modal-image" class="w-full h-48 object-cover rounded-md" />
+      <p  class="font-bold text-xl">Category : <span id="modal-category" class="font-normal"></span></p>
+      <p class="mt-2 font-semibold">Price: <span id="modal-price"></span></p>
+      <p  class="mt-2 font-bold">Description: <span id="modal-description" class="text-gray-600 font-normal"></span></p>
+      <button id="close-modal" class="text-lg font-bold float-right btn mt-2">Close</button>
+  </div>
+</div>
 
+
+
+<!--  -->
+
+    <!-- about the campaign section-->
     <section class="mt-28 max-w-[1090px] mx-auto">
         <h1 class="text-3xl lg:text-4xl font-bold text-center lg:mb-28">About the Campaign</h1>
 
