--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 
         <!-- div for adding cart -->
-        <div class="w-[20%] h-auto p-3">
+        <div class="lg:w-[20%] h-auto p-3">
             <h2 class="font-bold text-lg mb-3">Your Cart</h2>
             <div id="cart-items" class="space-y-2">
                 <!-- <div class="space-y-2">
@@ -97,7 +97,7 @@
                 </div>
                 <button class="btn">❌</button> -->
             </div>
-            <p class="mt-4 font-semibold">Total: <span id="cart-total">0</span> ৳</p>
+            <p class="mt-4 font-semibold text-right p-3 bg-white text-xl">Total: <span id="cart-total">0</span> ৳</p>
         </div>
 
     </section>
